--- a/app-monitor-client/pom.xml
+++ b/app-monitor-client/pom.xml
@@ -27,6 +27,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.misterchangray.appmonitor</groupId>
+            <version>1.0-SNAPSHOT</version>
+        <artifactId>app-monitor-base</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
