--- a/app-monitor-server/src/main/resources/application.yml
+++ b/app-monitor-server/src/main/resources/application.yml
@@ -43,3 +43,8 @@ mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+
+logging:
+  level:
+    root: debug
+  path: ./logs/
