feat: server can be use ssh detected process status

--- a/app-monitor-server/src/main/resources/application.yml
+++ b/app-monitor-server/src/main/resources/application.yml
@@ -5,6 +5,13 @@ server:
     context-path: /console
 
 
+global:
+  config:
+    ssh:
+      username: xxx
+      password: xxx
+      port: 22
+
 client:
   udpPort:23670
 
