--- a/app-monitor-console/package.json
+++ b/app-monitor-console/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "d2-admin",
+  "name": "App-Monitor",
   "version": "1.24.2",
   "scripts": {
     "serve": "vue-cli-service serve --open",
